--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <div class="container-fluid" style="text-align: center;">
     <div class="container pt-3">
     <h1> Diabetes Prediction App</h1>
-    <p> Select the features that is perculiar to you </p>
+    <p> Answer the condition questions </p>
   </div>
   </div>
 <form action="{{ url_for('predict')}}" method="post">
