--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <body >
       <div class="container-fluid" style="text-align: center;">
     <div class="container pt-3">
-    <h1> Diabetes Prediction App</h1>
+    <h1> Diabetes Prediction App V1</h1>
     <p> Answer the condition questions </p>
   </div>
   </div>
